--- a/src/style/style.css
+++ b/src/style/style.css
@@ -7,10 +7,13 @@ h1 {
 }
 
 .houseInfoForm {
-  width: 75%; 
+  width: 70%; 
 }
 
 .homePage {
   display: flex;
   flex-direction: column;
+  padding: 2rem;
+  align-items: center;
+  row-gap: 1rem;
 }
