--- a/src/style/style.css
+++ b/src/style/style.css
@@ -2,12 +2,24 @@ html, body {
   height: 100% 
 }
 
-h1 {
+body {
+  background-image: url("../components/map.jpeg");
+  color: rgb(46, 51, 117)!important;
+}
+
+h1, h3{
   text-align: center;
 }
 
+.cityPicker {
+    margin-bottom: 4rem;
+}
+
 .houseInfoForm {
-  width: 70%; 
+  background-color: white;
+  border: solid 1px white;
+  border-radius: 5px;
+  padding: 2rem 2rem;
 }
 
 .homePage {
@@ -16,4 +28,21 @@ h1 {
   padding: 2rem;
   align-items: center;
   row-gap: 1rem;
+}
+
+.homepagetitle {
+  background-color: rgb(218, 218, 218);
+  padding: 1rem;
+  color: rgb(46, 51, 117)!important;
+  box-shadow: 6px 6px rgb(156, 156, 156);
+  border-radius: 5px;
+}
+
+.navybar {
+  font-size:x-large;
+  background: rgb(184, 207, 226)!important;
+}
+
+.navybar .nav-link {
+  color: rgb(46, 51, 117)!important;
 }
