--- a/src/style/style.css
+++ b/src/style/style.css
@@ -11,6 +11,14 @@ h1, h3{
   text-align: center;
 }
 
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0; 
+}
+
 .cityPicker {
     margin-bottom: 4rem;
 }
