--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,11 @@ html, body {
 }
 
 body {
-  background-image: url("../components/map.jpeg");
+  /*background-image: url("./components/map.jpeg");*/
   color: rgb(46, 51, 117)!important;
 }
 
-h1, h3{
+h1, h3 {
   text-align: center;
 }
 
@@ -30,21 +30,6 @@ input[type=number]::-webkit-outer-spin-button {
   padding: 2rem 2rem;
 }
 
-.homePage {
-  display: flex;
-  flex-direction: column;
-  padding: 2rem;
-  align-items: center;
-  row-gap: 1rem;
-}
-
-.homepagetitle {
-  background-color: rgb(218, 218, 218);
-  padding: 1rem;
-  color: rgb(46, 51, 117)!important;
-  box-shadow: 6px 6px rgb(156, 156, 156);
-  border-radius: 5px;
-}
 
 .navybar {
   font-size:x-large;
