--- a/src/App.css
+++ b/src/App.css
@@ -20,15 +20,13 @@ input[type=number]::-webkit-outer-spin-button {
     margin: 0; 
 }
 
-.cityPicker {
-    margin-bottom: 4rem;
-}
-
 .houseInfoForm {
   background-color: white;
   border: solid 1px white;
   border-radius: 5px;
   padding: 2rem 2rem;
+  width: 40%;
+  font-size: 1.2rem;
 }
 
 
